Add get and refresh model names apis
